--- a/AzureFunctionApp/AzureFunction.App/AzureFunction.App.csproj
+++ b/AzureFunctionApp/AzureFunction.App/AzureFunction.App.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AzureFunctionCore\AzureFunctionCore.csproj" />
+    <ProjectReference Include="..\AzureFunction.Core\AzureFunction.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
