--- a/AzureFunctionApp/AzureFunction.Core/AzureFunction.Core.csproj
+++ b/AzureFunctionApp/AzureFunction.Core/AzureFunction.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
 </Project>
