--- a/AzureFunctionApp/AzureFunction.Start/AzureFunction.Start.csproj
+++ b/AzureFunctionApp/AzureFunction.Start/AzureFunction.Start.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.6" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
       <PackageReference Include="Microsoft.Identity.Client" Version="4.7.1" />
@@ -19,6 +20,9 @@
 
     <ItemGroup>
       <None Update="local.settings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
