--- a/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build.yml
+++ b/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build.yml
@@ -34,7 +34,7 @@ stages:
               command: 'publish'
               projects: 'AzureFunctionApp/AzureFunction.App/AzureFunction.App.csproj'
               publishWebProjects: false
-              arguments: '--configuration Release --output $(build.artifactstagingdirectory) --framework netcoreapp3.1'
+              arguments: '--no-restore --configuration Release --output $(build.artifactstagingdirectory) --framework netcoreapp3.1'
 
           - task: DotNetCoreCLI@2
             displayName: 'dotnet test'
