--- a/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
+++ b/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
@@ -47,7 +47,7 @@ stages:
           - task: Docker@2
             displayName: 'Build Docker image'
             inputs:
-              containerRegistry: 'ObjektForum Stuttgart'
+              containerRegistry: '$(dockerRegistry)'
               repository: 'functionapp'
               command: build
               Dockerfile: './AzureFunction.Infrastructure/Pipelines/Dockerfile'
@@ -59,7 +59,7 @@ stages:
           - task: Docker@2
             displayName: 'Push Docker image'
             inputs:
-              containerRegistry: 'ObjektForum Stuttgart'
+              containerRegistry: '$(dockerRegistry)'
               repository: 'functionapp'
               command: push
               tags: |
