--- a/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
+++ b/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
@@ -50,7 +50,7 @@ stages:
               containerRegistry: '$(dockerRegistry)'
               repository: 'functionapp'
               command: build
-              Dockerfile: './AzureFunction.Infrastructure/Pipelines/Dockerfile'
+              Dockerfile: './AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/Dockerfile'
               buildContext: '$(Build.BinariesDirectory)/output/AzureFunction.App/'
               tags: |
                 $(Build.BuildNumber)
