--- a/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
+++ b/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
@@ -33,7 +33,7 @@ stages:
             inputs:
               command: 'test'
               projects: '**/*.csproj'
-              arguments: '--no-restore --configuration Release --framework netcoreapp3.1'
+              arguments: '--no-restore --configuration Release --framework net6.0'
 
           - task: DotNetCoreCLI@2
             displayName: 'Create Package'
