--- a/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/Dockerfile
+++ b/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/azure-functions/dotnet:4-dotnet6-appservice
+FROM mcr.microsoft.com/azure-functions/dotnet:4-appservice
 COPY / /home/site/wwwroot
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
