--- a/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
+++ b/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
@@ -45,25 +45,27 @@ stages:
               zipAfterPublish: false
               
           - task: Docker@2
-            displayName: 'Build Docker image'
+            displayName: 'Build container image'
             inputs:
-              containerRegistry: '$(dockerRegistry)'
-              repository: 'functionapp'
+              containerRegistry: '$(containerRegistry)'
+              repository: 'sensor-app'
               command: build
               Dockerfile: './AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/Dockerfile'
               buildContext: '$(Build.BinariesDirectory)/output/AzureFunction.App/'
               tags: |
                 $(Build.BuildNumber)
+                latest
               addPipelineData: false
 
           - task: Docker@2
-            displayName: 'Push Docker image'
+            displayName: 'Push container image'
             inputs:
-              containerRegistry: '$(dockerRegistry)'
-              repository: 'functionapp'
+              containerRegistry: '$(containerRegistry)'
+              repository: 'sensor-app'
               command: push
               tags: |
                 $(Build.BuildNumber)
+                latest
               addPipelineData: false
 
           - pwsh: |
