--- a/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
+++ b/AzureFunctionApp/AzureFunction.Infrastructure/Pipelines/build_Docker.yml
@@ -72,6 +72,17 @@ stages:
               rm -rf $(Build.BinariesDirectory)/output/AzureFunction.App
             displayName: 'Clean up'
 
+          - template: azure-resource-group-deployment.yml
+              parameters:
+                displayName: Check resource template
+                azureSubscription: '$(azureResourceManagerConnection)'
+                deploymentName: 'check'
+                resourceGroupName: '$(resourceGroupName)'
+                location: '$(location)'
+                templateFile: 'resourceGroup.container.iac.bicep'
+                whatIf: true
+                additionalParameters: 'containerRegistryUrl=$(containerRegistryUrl) containerRegistryUser=$(containerRegistryUser) containerRegistryPassword=$(containerRegistryPassword)'
+
           - task: CopyFiles@2
             displayName: 'Copy resource template to artifacts'
             inputs:
@@ -99,25 +110,20 @@ stages:
                 - download: current
                   artifact: drop
 
-                - task: AzureResourceManagerTemplateDeployment@3
-                  displayName: Deploy resource group infrastructure
-                  inputs:
-                    deploymentScope: 'Resource Group'
-                    azureResourceManagerConnection: $(azureResourceManagerConnection)
-                    subscriptionId: $(subscriptionId)
-                    action: 'Create Or Update Resource Group'
-                    resourceGroupName: $(resourceGroupName)
-                    location: $(location)
-                    templateLocation: 'Linked artifact'
-                    csmFile: '$(Pipeline.Workspace)/drop/resourceGroup.docker.iac.json'
-                    deploymentMode: 'Incremental'
-                    deploymentName: 'continuous-deployment'
-                    overrideParameters: '-dockerRegistryUrl "$(dockerRegistryUrl)" -dockerRegistryUser "$(dockerRegistryUser)" -dockerRegistryPassword "$(dockerRegistryPassword)"'
+                - template: azure-resource-group-deployment.yml
+                    parameters:
+                      displayName: Check resource template
+                      azureSubscription: '$(azureResourceManagerConnection)'
+                      deploymentName: 'check'
+                      resourceGroupName: '$(resourceGroupName)'
+                      location: '$(location)'
+                      templateFile: 'resourceGroup.container.iac.bicep'
+                      additionalParameters: 'containerRegistryUrl=$(containerRegistryUrl) containerRegistryUser=$(containerRegistryUser) containerRegistryPassword=$(containerRegistryPassword)'
 
                 - task: AzureFunctionAppContainer@1
                   displayName: Deploy function app as container
                   inputs:
                     azureSubscription: $(azureResourceManagerConnection)
                     appName: $(appName)
-                    imageName: '$(dockerRegistryUrl)/functionapp:$(Build.BuildNumber)'
+                    imageName: '$(dockerRegistryUrl)/sensor-app:$(Build.BuildNumber)'
                     appSettings: '-FUNCTIONS_EXTENSION_VERSION ~4'
