--- a/AzureFunctionApp/AzureFunction.Start/AzureFunction.Start.csproj
+++ b/AzureFunctionApp/AzureFunction.Start/AzureFunction.Start.csproj
@@ -2,15 +2,12 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.6" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.0" />
-      <PackageReference Include="Microsoft.Identity.Client" Version="4.7.1" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
       <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 
